# PyJawsNamespace

./: README.md  pyproject.toml
py_jaws_namespace/: decorators.py  namespace_registry.py  namespace_resolver.py
